Generate separate Everest versions list including native builds